--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -84,9 +84,35 @@
       </div>
 
       <div class="image-row">
-        <img src="images/superteam.png" alt="superteam">
-        <img src="images/picture_2.jpg" alt="desk">
-        <img src="images/picture_3.jpg" alt="desk2">
+        <div class="image">
+          <img src="images/picture-1.jpg" alt="desk">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/USERS.png" alt="users">
+              <h4>SUPER TEAM</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="images/picture_2.jpg" alt="desk1">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/USERS.png" alt="users">
+              <h4>SUPER TEAM</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="images/picture_3.jpg" alt="desk2">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/USERS.png" alt="users">
+              <h4>SUPER TEAM</h4>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
@@ -216,6 +242,11 @@
         <h3>AMAZING SERVICES</h3>
         <div class="red-line"></div>
       </div>
+
+      <div class="devices-group">
+        <img src="/images/tablet.png" alt="tablet" class="devices-item tablet">
+        <img src="/images/phone.png" alt="phone" class="devices-item phone">
+      </div>
     </div>
 
   </section>
@@ -256,11 +287,12 @@
             <div class="activity-text">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dicta nemo eaque fugit voluptates ex
                 excepturi adipisci. Doloribus, dicta? Officia?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Fugit vel optio a hic maiores temporibus molestiae ex, consectetur ipsam architecto. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit.
                 Fugit vel optio a hic maiores temporibus molestiae ex, consectetur ipsam architecto. Fugit vel optio a
-                hic maiores temporibus molestiae ex, consectetur ipsam architecto. </p>
-            </div>
-            <div class="activity-icon">
-              <img src="images/icons/scrollbar_line.png" alt="scroll-line">
+                hic maiores temporibus molestiae ex, consectetur ipsam architecto. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit.
+                Fugit vel optio a hic maiores temporibus molestiae ex, consectetur ipsam architecto. </p>
             </div>
           </div>
 
@@ -330,8 +362,8 @@
     <div class="container">
 
       <div class="title">
-        <h4>Service</h4>
-        <h3>WHAT WE DO</h3>
+        <h4>Who we are</h4>
+        <h3>MEET OUR TEAM</h3>
         <div class="red-line"></div>
         <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus commodi esse placeat qui, quam nemo ipsa
           corrupti nam neque laborum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
@@ -339,25 +371,48 @@
 
       <div class="team-row">
         <div class="team-member">
-          <img src="images/picture_13.png" alt="graphic-designer">
+          <img src="images/picture-2.jpg" alt="graphic-designer">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/facebook_pic.png" alt="facebook">
+              <img src="/images/icons/twitter-pic.png" alt="twitter">
+              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
+              <img src="/images/icons/instagram_pic.png" alt="instagram">
+            </div>
+          </div>
           <h6>MATTHEW DIX</h6>
           <p>Graphic design</p>
         </div>
 
         <div class="team-member">
           <img src="images/picture_5.jpg" alt="branding-designer">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/facebook_pic.png" alt="facebook">
+              <img src="/images/icons/twitter-pic.png" alt="twitter">
+              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
+              <img src="/images/icons/instagram_pic.png" alt="instagram">
+            </div>
+          </div>
           <h6>CHRISTOPHER CAMPBELL</h6>
           <p>Branding/UX design</p>
         </div>
 
         <div class="team-member">
           <img src="images/picture_7.jpg" alt="developer">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/facebook_pic.png" alt="facebook">
+              <img src="/images/icons/twitter-pic.png" alt="twitter">
+              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
+              <img src="/images/icons/instagram_pic.png" alt="instagram">
+            </div>
+          </div>
           <h6>MICHAEL FERTIG</h6>
           <p>Developer</p>
         </div>
-      </div>
 
-    </div>
+      </div>
 
   </section>
 
@@ -390,21 +445,92 @@
 
     <div class="works-images">
       <div class="images-block">
-        <img src="images/pic1.jpg" alt="1">
-        <img src="images/pic3.jpg" alt="2">
+
+        <div class="image">
+          <img src="images/pic1.jpg" alt="1">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="images/pic3.jpg" alt="2">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="images-block">
-        <img src="images/pic5.jpg" alt="5">
-        <img src="images/pic6.jpg" alt="6">
+
+        <div class="image">
+          <img src="images/pic5.jpg" alt="5">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="images/pic6.jpg" alt="6">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="images-block">
-        <img src="images/pic2.jpg" alt="3">
+        <div class="image">
+          <img src="images/pic2.jpg" alt="3">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="images-block">
-        <img src="images/pic4.jpg" alt="4">
-        <img src="images/pic7.jpg" alt="7">
+        <div class="image">
+          <img src="images/pic4.jpg" alt="4">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+          
+        </div>
+
+        <div class="image">
+          <img src="images/pic7.jpg" alt="7">
+          <div class="overlay">
+            <div class="text">
+              <img src="/images/icons/PICTURE-pic.png" alt="picture">
+              <h6>CREATIVELY DESIGNED</h6>
+              <p>Lorem ipsum dolor sit.</p>
+            </div>
+          </div>
+        </div>
+        
       </div>
 
     </div>
@@ -701,7 +827,6 @@
         <p>&copy; 2016 MoGo free PSD template by <span>Laaqiq</span></p>
       </div>
     </div>
-
 
   </footer>
 
