--- a/3diena/mogo-projektas/index.html
+++ b/3diena/mogo-projektas/index.html
@@ -84,32 +84,44 @@
       </div>
 
       <div class="image-row">
-        <div class="image">
-          <img src="images/picture-1.jpg" alt="desk">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/USERS.png" alt="users">
-              <h4>SUPER TEAM</h4>
+        <div class="image-item">
+          <div class="image-inner">
+            <div class="image">
+              <img src="images/picture-1.jpg" alt="desk">
+              <div class="overlay">
+                <div class="text">
+                  <img src="/images/icons/USERS.png" alt="users">
+                  <h4>SUPER TEAM</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="image">
-          <img src="images/picture_2.jpg" alt="desk1">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/USERS.png" alt="users">
-              <h4>SUPER TEAM</h4>
+        <div class="image-item">
+          <div class="image-inner">
+            <div class="image">
+              <img src="images/picture_2.jpg" alt="desk1">
+              <div class="overlay">
+                <div class="text">
+                  <img src="/images/icons/USERS.png" alt="users">
+                  <h4>SUPER TEAM</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="image">
-          <img src="images/picture_3.jpg" alt="desk2">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/USERS.png" alt="users">
-              <h4>SUPER TEAM</h4>
+        <div class="image-item">
+          <div class="image-inner">
+            <div class="image">
+              <img src="images/picture_3.jpg" alt="desk2">
+              <div class="overlay">
+                <div class="text">
+                  <img src="/images/icons/USERS.png" alt="users">
+                  <h4>SUPER TEAM</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -370,42 +382,54 @@
       </div>
 
       <div class="team-row">
-        <div class="team-member">
-          <img src="images/picture-2.jpg" alt="graphic-designer">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/facebook_pic.png" alt="facebook">
-              <img src="/images/icons/twitter-pic.png" alt="twitter">
-              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
-              <img src="/images/icons/instagram_pic.png" alt="instagram">
+        <div class="team-item">
+          <div class="team-inner">
+            <div class="team-member">
+              <img src="images/picture-2.jpg" alt="graphic-designer">
+              <div class="overlay">
+                <div class="text social">
+                  <img src="/images/icons/facebook_pic.png" alt="facebook" class="social-item">
+                  <img src="/images/icons/twitter-pic.png" alt="twitter" class="social-item">
+                  <img src="/images/icons/pinterest_pic.png" alt="pinterest" class="social-item">
+                  <img src="/images/icons/instagram_pic.png" alt="instagram" class="social-item">
+                </div>
+              </div>
             </div>
           </div>
           <h6>MATTHEW DIX</h6>
           <p>Graphic design</p>
         </div>
 
-        <div class="team-member">
-          <img src="images/picture_5.jpg" alt="branding-designer">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/facebook_pic.png" alt="facebook">
-              <img src="/images/icons/twitter-pic.png" alt="twitter">
-              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
-              <img src="/images/icons/instagram_pic.png" alt="instagram">
+        <div class="team-item">
+          <div class="team-inner">
+            <div class="team-member">
+              <img src="images/picture_5.jpg" alt="branding-designer">
+              <div class="overlay">
+                <div class="text social">
+                  <img src="/images/icons/facebook_pic.png" alt="facebook" class="social-item">
+                  <img src="/images/icons/twitter-pic.png" alt="twitter" class="social-item">
+                  <img src="/images/icons/pinterest_pic.png" alt="pinterest" class="social-item">
+                  <img src="/images/icons/instagram_pic.png" alt="instagram" class="social-item">
+                </div>
+              </div>
             </div>
           </div>
           <h6>CHRISTOPHER CAMPBELL</h6>
           <p>Branding/UX design</p>
         </div>
 
-        <div class="team-member">
-          <img src="images/picture_7.jpg" alt="developer">
-          <div class="overlay">
-            <div class="text">
-              <img src="/images/icons/facebook_pic.png" alt="facebook">
-              <img src="/images/icons/twitter-pic.png" alt="twitter">
-              <img src="/images/icons/pinterest_pic.png" alt="pinterest">
-              <img src="/images/icons/instagram_pic.png" alt="instagram">
+        <div class="team-item">
+          <div class="team-inner">
+            <div class="team-member">
+              <img src="images/picture_7.jpg" alt="developer">
+              <div class="overlay">
+                <div class="text social">
+                  <img src="/images/icons/facebook_pic.png" alt="facebook" class="social-item">
+                  <img src="/images/icons/twitter-pic.png" alt="twitter" class="social-item">
+                  <img src="/images/icons/pinterest_pic.png" alt="pinterest" class="social-item">
+                  <img src="/images/icons/instagram_pic.png" alt="instagram" class="social-item">
+                </div>
+              </div>
             </div>
           </div>
           <h6>MICHAEL FERTIG</h6>
@@ -517,7 +541,7 @@
               <p>Lorem ipsum dolor sit.</p>
             </div>
           </div>
-          
+
         </div>
 
         <div class="image">
@@ -530,7 +554,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
 
     </div>
