--- a/2-savaitė-JS/3-uzduotis/index.html
+++ b/2-savaitė-JS/3-uzduotis/index.html
@@ -15,9 +15,14 @@
   <h3>1 užduotis</h3>
   <p>Futbolininkų sąrašas</p>
 
-  <ol id="list"></ol>
+  <ol>
+    <li id="pirmas"></li>
+    <li id="antras"></li>
+    <li id="trecias"></li>
+  </ol>
 
   <div id="fastest"></div>
+
 
   <!-- 2 uzduotis -->
 
